# nexus

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPRECATED.md  PUNCHLIST.md  README.md  RELEASE.md  SESSION_SUMMARIES.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/nexus-acp/: Cargo.toml
crates/nexus-acp/src/: client.rs  config.rs  core_plugin.rs  ipc.rs  lib.rs  pool.rs  server.rs  transport.rs
crates/nexus-agent/: Cargo.toml
crates/nexus-agent/src/: agents.rs  archetypes.rs  auto_notify.rs  compression.rs  context_sanitize.rs  core_plugin.rs  custom_agent.rs  executor.rs  lib.rs  llm.rs  memory.rs  orchestrator.rs  session.rs  snapshots.rs  subagent.rs  todo.rs  tool_registry.rs  transcript_search.rs
crates/nexus-agent/tests/: orchestrator_e2e.rs  session_loop.rs
crates/nexus-ai/: Cargo.toml
crates/nexus-ai-runtime/: Cargo.toml
crates/nexus-ai-runtime/src/: core_plugin.rs  event_input.rs  events.rs  lib.rs  pool.rs  proposal.rs  republisher.rs  scheduler.rs  session.rs  supervisor.rs
crates/nexus-ai/src/: activity_log.rs  anthropic.rs  cancel.rs  chunker.rs  config.rs  core_plugin.rs  embedding.rs  enrichment.rs  error.rs  exclusion.rs  generate_docs.rs  http_client.rs  indexing_daemon.rs  ipc.rs  lib.rs  local_embedding.rs  ollama.rs  openai.rs  privacy.rs  provider.rs  rag.rs  sanitize.rs  tokens.rs  vectorstore.rs
crates/nexus-ai/tests/: predict_smoke.rs
crates/nexus-app/: Cargo.toml  tauri.conf.json
crates/nexus-app/capabilities/: default.json
crates/nexus-app/icons/: icon.icns
crates/nexus-app/seeds/: Architecture.md  Decision log.md  Quick start.md  Reading list.md  Tasks.md  Welcome.md
crates/nexus-app/src/: agent.rs  ai.rs  commands.rs  database.rs  editor.rs  forge.rs  keybindings.rs  lib.rs  main.rs  persistence.rs  plugins.rs  skills.rs  terminal.rs  uri.rs  workflow.rs
crates/nexus-audio/: Cargo.toml
crates/nexus-audio/src/: backend.rs  config.rs  core_plugin.rs  error.rs  ipc.rs  lib.rs  local_backend.rs  provider_backend.rs  stub_backend.rs
crates/nexus-bootstrap/: Cargo.toml  cap_matrix.toml
crates/nexus-bootstrap/src/: acp_contribution_wiring.rs  agent.rs  audit_sqlite.rs  cap_matrix.rs  cap_policies.rs  collab.rs  crdt_publisher.rs  dap_contribution_wiring.rs  database.rs  dream_cycle.rs  forge_template.rs  invoker.rs  lib.rs  lsp_contribution_wiring.rs  mcp_contribution_wiring.rs  memory_capture.rs  protocol_host_specs.rs  reconnect.rs  remote.rs  storage.rs  terminal.rs
crates/nexus-bootstrap/tests/: acp_contribution_wiring.rs  acp_server.rs  agent_ipc.rs  ai_capability_gate.rs  ai_ipc.rs  ai_runtime_ipc.rs  amplifier_caps.rs  bootstrap_coverage.rs  build_runtime.rs  cap_matrix_complete.rs  community_to_core_ipc.rs  core_plugin_loc_budget.rs  crdt_publisher_e2e.rs  cross_plugin_ipc.rs  dap_contribution_wiring.rs  database_ipc.rs  dep_invariants.rs  dep_invariants_shell.rs  editor_excerpts_ipc.rs  editor_ipc.rs  event_bus_anti_spoofing.rs  forge_ipc.rs  formats_ipc.rs  git_ipc.rs  ipc_schema_emit.rs  ipc_strictness.rs  ipc_topic_prefix_invariant.rs  ipc_versioning.rs  legacy_freeze.rs  lsp_contribution_wiring.rs  manifest_deps_match_boot_order.rs  mcp_contribution_wiring.rs  mcp_ipc.rs  notifications_inbox_ipc.rs  phase1_smoke.rs  plugin_contract_purity.rs  process_spawn_gate.rs  protocol_host_contribute_cap.rs  reconnect_loop.rs  registration_order.rs  (+9 more)
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: app.rs  args.rs  main.rs  output.rs  stubs.rs
crates/nexus-cli/tests/: cli-integration.rs  prd-05-smoke.rs
crates/nexus-collab/: Cargo.toml
crates/nexus-collab/src/: auth.rs  client.rs  core_plugin.rs  lib.rs  presence.rs  protocol.rs  reconnect_client.rs  server.rs  url.rs
crates/nexus-collab/tests/: client_bridge.rs  dod.rs  presence_bridge.rs  reconnect.rs  relay_server.rs
crates/nexus-comments/: Cargo.toml
crates/nexus-comments/src/: core_plugin.rs  lib.rs  store.rs  types.rs
crates/nexus-context/: Cargo.toml
crates/nexus-context/src/: lib.rs
crates/nexus-crdt/: Cargo.toml
crates/nexus-crdt/src/: conflict.rs  doc.rs  error.rs  id.rs  lib.rs  log.rs  merge.rs  op.rs  state.rs  sync.rs  text.rs  wire.rs
crates/nexus-dap/: Cargo.toml
crates/nexus-dap/src/: client.rs  config.rs  core_plugin.rs  ipc.rs  lib.rs  pool.rs  protocol.rs  transport.rs
crates/nexus-dap/tests/: end_to_end.rs
crates/nexus-database/: Cargo.toml
crates/nexus-database/src/: core_plugin.rs  error.rs  import_export.rs  lib.rs  query.rs  relation.rs  relations.rs  schema.rs  types.rs  validate.rs  views.rs
crates/nexus-database/tests/: issue_78_bounds.rs
crates/nexus-editor/: Cargo.toml
crates/nexus-editor/src/: annotation.rs  block.rs  core_plugin.rs  database_view.rs  error.rs  excerpt_map.rs  ipc.rs  lib.rs  transaction.rs  tree.rs  undo_tree.rs
crates/nexus-editor/tests/: perf_apply_transaction.rs
crates/nexus-formats/: Cargo.toml
crates/nexus-formats/src/: core_plugin.rs  error.rs  lib.rs  migration.rs  version.rs
crates/nexus-formats/tests/: issue_78_bounds.rs
crates/nexus-fuzz/: Cargo.toml  README.md
crates/nexus-fuzz/fuzz_targets/: fuzz_capability_set.rs  fuzz_event_type_id.rs  fuzz_manifest_parse.rs  fuzz_path_validator.rs  fuzz_wasm_instantiation.rs
crates/nexus-fuzz/src/: lib.rs
crates/nexus-fuzz/tests/: smoke.rs
crates/nexus-git/: Cargo.toml
crates/nexus-git/src/: auto_commit.rs  core_plugin.rs  engine.rs  error.rs  ipc.rs  lfs.rs  lib.rs  types.rs  worker.rs
crates/nexus-git/tests/: integration.rs
crates/nexus-gpui/: Cargo.toml
crates/nexus-gpui/src/: ai.rs  editor.rs  graph.rs  kernel_bridge.rs  lib.rs  main.rs  pane.rs  (+2 more)
crates/nexus-hashline/: Cargo.toml
crates/nexus-kernel/: Cargo.toml
crates/nexus-kv/: Cargo.toml
crates/nexus-linkpreview/: Cargo.toml
crates/nexus-lsp/: Cargo.toml
crates/nexus-mcp/: Cargo.toml
crates/nexus-memory/: Cargo.toml
crates/nexus-memory-hub/: Cargo.toml  Containerfile  README.md
crates/nexus-notifications/: Cargo.toml
crates/nexus-panic-log/: Cargo.toml
(+2826 files in other folders)
