[workspace]
resolver = "2"
exclude = ["shell"]
members = [
    "crates/nexus-types",
    "crates/nexus-plugin-api",
    "crates/nexus-kernel",
    "crates/nexus-kv",
    "crates/nexus-security",
    "crates/nexus-storage",
    "crates/nexus-plugins",
    "crates/nexus-ai",
    "crates/nexus-mcp",
    "crates/nexus-cli",
    "crates/nexus-tui",
    "crates/nexus-git",
    "crates/nexus-formats",
    "crates/nexus-database",
    "crates/nexus-theme",
    "crates/nexus-bootstrap",
    "crates/nexus-editor",
    "crates/nexus-terminal",
    "crates/nexus-agent",
    "crates/nexus-skills",
    "crates/nexus-workflow",
    "crates/nexus-linkpreview",
    "crates/nexus-panic-log",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# Internal crates
nexus-plugin-api = { path = "crates/nexus-plugin-api" }

# Async runtime
tokio = { version = "1.51", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "net",
    "time",
    "sync",
    "process",
    "signal",
] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# Utilities
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
thiserror = "2.0"
async-trait = "0.1"

# Keyring (OS credential storage)
keyring = "3"

# SQLite
rusqlite = { version = "0.39", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"

# Full-text search
tantivy = { version = "0.26", default-features = false, features = ["mmap", "stopwords", "stemmer", "lz4-compression"] }

# Markdown parsing
comrak = { version = "0.52", default-features = false, features = [] }

# File watching
notify = "8"
notify-debouncer-mini = "0.7"

# WASM runtime
wasmtime = { version = "42", default-features = false, features = ["runtime", "std", "cranelift", "cache", "parallel-compilation"] }

# JSON Schema validation
jsonschema = "0.46"

# Semver parsing
semver = "1"

# Regex (lightweight)
regex-lite = "0.1"

# Parallelism
rayon = "1.11"

# Hashing
sha2 = "0.11"

# YAML frontmatter
serde_yaml = "0.9"

# System interfaces
libc = "0.2"

# File time manipulation
filetime = "0.2"

# Test utilities
tempfile = "3"

# CSV
csv = "1.3"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.5"
anyhow = "1"
comfy-table = "7"
ctrlc = "3.5"
# REPL line editing for `nexus ai chat` (BL-010)
rustyline = "14"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Knowledge graph
petgraph = "0.7"

# HTTP client (AI provider calls)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }

# MCP server + client (client is used by the Host-side integration that lets
# Nexus connect to external MCP servers listed in `mcp.toml`)
# BL-023: enabled `transport-streamable-http-client*` + `client-side-sse`
# so the Host-side `McpClient` can connect to remote MCP servers over
# HTTP+SSE (the modern MCP 2025-03-26 "Streamable HTTP" transport).
rmcp = { version = "1.3", features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "reqwest-native-tls", "client-side-sse", "macros"] }

# PTY + shell spawning (PRD-09 Terminal & Process Manager)
portable-pty = "0.9"
schemars = "1"

# Tauri desktop shell
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# TypeScript type generation for IPC boundary
ts-rs = { version = "11", features = ["serde-compat"] }

# ---------------------------------------------------------------------------
# Build profiles
# ---------------------------------------------------------------------------

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false

[profile.release-with-debug]
inherits = "release"
debug = "full"
strip = "none"

[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16
