[package]
name = "nexus-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus agent system: Agent trait, Plan/Step types, and PlanExecutor driving tool calls through kernel IPC (PRD-15 scaffold)"

[dependencies]
async-trait = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }

[dev-dependencies]
tokio = { workspace = true }
