[package]
name = "nexus-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus agent system: Agent trait, Plan/Step types, and PlanExecutor driving tool calls through kernel IPC (PRD-15 scaffold)"

[dependencies]
async-trait = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
ts-rs = { workspace = true, optional = true, features = ["serde-json-impl"] }
schemars = { workspace = true, optional = true }

[features]
# Audit-2026-05-01 P1-3 (#113) — emit JSON Schema + TypeScript bindings
# for IPC arg/reply types. Off by default.
ts-export = ["dep:ts-rs", "dep:schemars"]

[dev-dependencies]
tokio = { workspace = true }
