[package]
name = "nexus-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus agent system: Agent trait, Plan/Step types, and PlanExecutor driving tool calls through kernel IPC (PRD-15 scaffold)"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
# RFC 0007 PR 3 — OS-sandbox the isolated subagent child. `nexus-types` is the
# leaf crate that owns `SandboxPolicy` + `sandbox_argv` (the helper argv
# encoder), so the agent can build a sandboxed spawn without linking the
# enforcement engine (`nexus-security`).
nexus-types = { path = "../nexus-types" }
# BL-121 — FTS5-backed transcript search over `.forge/agents/*/history.jsonl`.
# Lives in `transcript_search.rs`; default no-feature build pulls in the
# rusqlite bundled SQLite, same shape every other in-tree SQLite consumer
# uses.
rusqlite = { workspace = true }
# BL-131 — pattern matching for context-sanitisation passes (base64
# data URIs, stale browser-snapshot markers). Same dep `nexus-ai` uses
# for the BL-017 / BL-130 scanners.
regex-lite = { workspace = true }
# C29 (#382) — session write-snapshots: sha-256 content guards + compact
# base64 storage of pre-write bytes in `.forge/agent/snapshots/`.
sha2 = { workspace = true }
base64 = { workspace = true }
ts-rs = { workspace = true, optional = true, features = ["serde-json-impl"] }
schemars = { workspace = true, optional = true }

[features]
# Audit-2026-05-01 P1-3 (#113) — emit JSON Schema + TypeScript bindings
# for IPC arg/reply types. Off by default.
ts-export = ["dep:ts-rs", "dep:schemars"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
