[package]
name = "nexus-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus AI engine: provider traits, embeddings, RAG pipeline"

[dependencies]
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
async-trait = { workspace = true }
futures = "0.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
ts-rs = { workspace = true, optional = true, features = ["chrono-impl", "uuid-impl"] }
schemars = { workspace = true, optional = true }

[features]
# Emit TypeScript + JSON Schema bindings for the Phase 4 WI-36 pilot IPC
# handler types. Off by default so normal Rust builds don't pull ts-rs or
# schemars. Enable with `cargo test -p nexus-ai --features ts-export` when
# regenerating bindings.
ts-export = ["dep:ts-rs", "dep:schemars"]
