[package]
name = "nexus-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus desktop shell (Tauri 2): hosts the frontend and bridges it to the Rust subsystems"

[lib]
name = "nexus_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nexus-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
nexus-theme = { path = "../nexus-theme" }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
