[package]
name = "nexus-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus runtime bootstrap: assembles kernel, plugin loader, and core plugins for CLI/TUI invokers"

[dependencies]
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
nexus-security = { path = "../nexus-security" }
nexus-storage = { path = "../nexus-storage" }
nexus-git = { path = "../nexus-git" }
nexus-database = { path = "../nexus-database" }
nexus-ai = { path = "../nexus-ai" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
