[package]
name = "nexus-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus runtime bootstrap: assembles kernel, plugin loader, and core plugins for CLI/TUI invokers"

[dependencies]
nexus-formats = { path = "../nexus-formats" }
nexus-kernel = { path = "../nexus-kernel" }
nexus-kv = { path = "../nexus-kv" }
nexus-plugins = { path = "../nexus-plugins" }
nexus-security = { path = "../nexus-security" }
nexus-storage = { path = "../nexus-storage" }
nexus-database = { path = "../nexus-database" }
nexus-ai = { path = "../nexus-ai" }
nexus-editor = { path = "../nexus-editor" }
nexus-theme = { path = "../nexus-theme" }
nexus-types = { path = "../nexus-types" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
