[package]
name = "nexus-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus runtime bootstrap: assembles kernel, plugin loader, and core plugins for CLI/TUI invokers"

[features]
# Enables JSON-Schema emission for the Phase 4 WI-36 pilot IPC types via
# the `ipc_schema_emit` integration test. Off by default so normal builds
# stay free of `schemars`. Enable with `cargo test -p nexus-bootstrap
# --test ipc_schema_emit --features ts-export`.
ts-export = [
    "nexus-storage/ts-export",
    "nexus-ai/ts-export",
    "nexus-linkpreview/ts-export",
    "nexus-git/ts-export",
    "nexus-mcp/ts-export",
    "nexus-lsp/ts-export",
    "nexus-agent/ts-export",
    "nexus-comments/ts-export",
    "nexus-theme/ts-export",
    "nexus-skills/ts-export",
    "nexus-templates/ts-export",
    "nexus-formats/ts-export",
    "nexus-workflow/ts-export",
    "nexus-terminal/ts-export",
    "nexus-database/ts-export",
    # BL-052 — activity-timeline types live in `nexus-types::activity`.
    "nexus-types/ts-export",
]

[dependencies]
nexus-formats = { path = "../nexus-formats" }
nexus-kernel = { path = "../nexus-kernel" }
nexus-kv = { path = "../nexus-kv" }
nexus-plugins = { path = "../nexus-plugins" }
nexus-security = { path = "../nexus-security" }
nexus-storage = { path = "../nexus-storage" }
nexus-database = { path = "../nexus-database" }
nexus-ai = { path = "../nexus-ai" }
nexus-editor = { path = "../nexus-editor" }
nexus-crdt = { path = "../nexus-crdt" }
nexus-terminal = { path = "../nexus-terminal" }
nexus-theme = { path = "../nexus-theme" }
nexus-git = { path = "../nexus-git" }
nexus-mcp = { path = "../nexus-mcp" }
nexus-lsp = { path = "../nexus-lsp" }
nexus-types = { path = "../nexus-types" }
nexus-agent = { path = "../nexus-agent" }
nexus-skills = { path = "../nexus-skills" }
nexus-templates = { path = "../nexus-templates" }
nexus-workflow = { path = "../nexus-workflow" }
nexus-linkpreview = { path = "../nexus-linkpreview" }
nexus-comments = { path = "../nexus-comments" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
schemars = { workspace = true }
zip = { workspace = true }
nexus-storage = { path = "../nexus-storage" }
