[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus IDE — headless CLI"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-kernel = { path = "../nexus-kernel" }
nexus-security = { path = "../nexus-security" }
nexus-storage = { path = "../nexus-storage" }
nexus-plugins = { path = "../nexus-plugins" }
nexus-types = { path = "../nexus-types" }
nexus-ai = { path = "../nexus-ai" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
ctrlc = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
