[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus IDE — headless CLI"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-bootstrap = { path = "../nexus-bootstrap" }
nexus-kernel = { path = "../nexus-kernel" }
nexus-security = { path = "../nexus-security" }
nexus-plugins = { path = "../nexus-plugins" }
nexus-types = { path = "../nexus-types" }
nexus-mcp = { path = "../nexus-mcp" }
nexus-git = { path = "../nexus-git" }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
ctrlc = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
nexus-storage = { path = "../nexus-storage" }
tempfile = { workspace = true }
