[package]
name = "nexus-collab"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus live-collaboration network transport (BL-143 Phase 1) — WebSocket relay that ferries CRDT op + presence envelopes between peers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "io-util"] }
