[package]
name = "nexus-collab"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus live-collaboration network transport (BL-143 Phase 1) — WebSocket relay that ferries CRDT op + presence envelopes between peers"

[dependencies]
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
ts-rs = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[features]
# AA-07 / P3-04 — emit TypeScript bindings + JSON Schema for the
# `com.nexus.collab` IPC wire types in `core_plugin.rs` and the
# presence payloads in `presence.rs`. Off by default; enabled by
# `scripts/check_ipc_drift.sh`. Same pattern as `nexus-security`.
ts-export = ["dep:ts-rs", "dep:schemars"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "io-util"] }
