[package]
name = "nexus-comments"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus side-margin comments subsystem (BL-050): persistent threads anchored to stable block ids"

[dependencies]
nexus-plugins = { path = "../nexus-plugins" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex-lite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
